# protosearch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  buf.yaml  tbump.toml
.github/workflows/: ci.yaml  release.yaml
crates/protosearch-gen/: Cargo.toml
crates/protosearch-plugin/: Cargo.toml  build.rs
crates/protosearch-plugin/src/: config.rs  context.rs  diagnostic.rs  dialect.rs  error.rs  lib.rs  main.rs  mapping.rs  message.rs  options.rs  plugin.rs  span.rs  validator.rs
crates/protosearch-plugin/src/snapshots/: protosearch_plugin__tests__dynamic.snap  protosearch_plugin__tests__enum.snap  protosearch_plugin__tests__fielddata.snap  protosearch_plugin__tests__index_options.snap  protosearch_plugin__tests__index_params.snap  protosearch_plugin__tests__infer_type.snap  protosearch_plugin__tests__list_fielddata.snap  protosearch_plugin__tests__nested.snap  protosearch_plugin__tests__no_target.snap  protosearch_plugin__tests__null_fielddata.snap  protosearch_plugin__tests__struct_fielddata.snap  protosearch_plugin__tests__target.snap  protosearch_plugin__tests__term_vector.snap
crates/protosearch-vendor/: Cargo.toml  Makefile
crates/protosearch-vendor/proto/protosearch/elasticsearch/: elasticsearch.proto
crates/protosearch-vendor/src/: lib.rs  main.rs  spec.rs
crates/protosearch-vendor/src/snapshots/: protosearch_gen__tests__elasticsearch_v8__compile_into.snap  protosearch_gen__tests__elasticsearch_v8__extract.snap  protosearch_gen__tests__elasticsearch_v8__render.snap
doc/: reference.md
proto/example/: article.proto
proto/protosearch/: protosearch.proto
proto/tests/: tests.proto
src/: cli.rs  error.rs  lib.rs  openapi.rs  proto.rs  spec.rs
src/snapshots/: protosearch__tests__elasticsearch_v8__compile.snap  protosearch__tests__elasticsearch_v8__extract.snap  protosearch__tests__elasticsearch_v8__render.snap
(+8 files in other folders)
