[package]
name = "protosearch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive", "cargo", "env"] }
clap-stdin = "0.8.0"
openapiv3 = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
