[package]
name = "protosearch-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
protobuf = { version = "3.7.2", features = ["with-bytes"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
insta = { version = "1.46.3", features = ["json"] }

[[bin]]
name = "protoc-gen-protosearch"
path = "src/main.rs"
