[package]
name = "protosearch-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
protobuf = { version = "3.7.2" }
regex = "1.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
protoc-bin-vendored = { version = "3.2.0" }
protobuf-codegen = "3.7.2"

[dev-dependencies]
insta = { version = "1.46.3", features = ["json"] }

[[bin]]
name = "protoc-gen-protosearch"
path = "src/main.rs"
